Name:                yesod-auth-fb
Version:             1.7
Synopsis:            Authentication backend for Yesod using Facebook.
Homepage:            https://github.com/meteficha/yesod-auth-fb
License:             BSD3
License-file:        LICENSE
Author:              Felipe Lessa, Michael Snoyman
Maintainer:          Felipe Lessa <felipe.lessa@gmail.com>
Category:            Web
Build-type:          Simple
Cabal-version:       >= 1.6
Extra-source-files:  README, demo/clientside.hs

Description:
  This package allows you to use Yesod's authentication framework
  with Facebook as your backend.  That is, your site's users will
  log in to your site through Facebook.  Your application need to
  be registered on Facebook.
  .
  This package works with both the server-side authentication
  flow
  (<https://developers.facebook.com/docs/authentication/server-side/>)
  via the "Yesod.Auth.Facebook.ServerSide" module and the
  client-side authentication
  (<https://developers.facebook.com/docs/authentication/client-side/>)
  via the "Yesod.Auth.Facebook.ClientSide" module.  It's up to
  you to decide which one to use.  The server-side code is older
  and as such has been through a lot more testing than the
  client-side code.  Also, for now only the server-side code is
  able to work with other authentication plugins.  The
  client-side code, however, allows you to use some features that
  are available only to the Facebook JS SDK (such as
  automatically logging your users in, see
  <https://developers.facebook.com/blog/post/2012/05/08/how-to--improve-the-experience-for-returning-users/>).

Source-repository head
  type:     git
  location: git://github.com/meteficha/yesod-auth-fb.git

Library
  hs-source-dirs: src

  Build-depends: base                          >= 4          && < 5
               , yesod-core                    >= 1.2        && < 1.3
               , yesod-auth                    >= 1.2        && < 1.3
               , bytestring                    >= 0.9        && < 0.11
               , text                          >= 0.11       && < 2.0
               , shakespeare-js                >= 1.2        && < 1.3
               , aeson                         >= 0.6        && < 0.8
               , yesod-fb                      == 0.4
               , fb                            == 0.15
               , wai
               , transformers
               , time
               , lifted-base

  Exposed-modules: Yesod.Auth.Facebook
                 , Yesod.Auth.Facebook.ClientSide
                 , Yesod.Auth.Facebook.ServerSide
  Extensions: GADTs QuasiQuotes OverloadedStrings
  GHC-options: -Wall
